<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24sp"
    android:scrollbars="none"
    tools:context=".activities.SigninActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:text="@string/teachertalk"
            android:textColor="@color/primary_dark"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:text="@string/login_to_continue"
            android:textColor="@color/primary"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="40sp"
            android:background="@color/primary_text"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailSubject"
            android:paddingStart="16sp"
            android:paddingEnd="13sp"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16sp"
            android:background="@color/primary_text"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="13dp"
            android:textColor="@color/black"
            android:textSize="15sp"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignin"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:cornerRadius="8sp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>



        <TextView
            android:id="@+id/textCreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/create_new_account"
            android:textColor="@color/primary_dark"
            android:textSize="13sp"
            android:textStyle="bold" />


    </LinearLayout>

</ScrollView>